--- a/cv.tex
+++ b/cv.tex
@@ -8,24 +8,44 @@
 
 \begin{document}
 
-\headinginline{Tomasz Nowak}{
-	test\\
-	test\\
-	test\\
-	}{
+\headinginline{Tomasz Nowak}
+	{
     Website: \website{tonowak.com} \\ 
     Email: \email{tomasz.nowak@tonowak.com} \\
-    Phone: +48 507 228 642 \\
     GitHub: \github{tonowak} \\
+    GiLab: \gitlab{tonowak} \\
     LinkedIn: \linkedin{tomasz-nowak-tonowak} \\
 }% {PA_zdjecie_twarzy.jpg}
 
 \section{Experience}
 \outerlist{
-	\entry{\textbf{Jane Street -- Software Developer Internship} \hfill London}
+	\entry{\textbf{Jane Street -- Software Developer Internship, 
+		2022 and 2023} \hfill London}
 	\innerlist {
-		\entry{Summer 2023: soon}
-		\entry{Summer 2022: TODO -- describe the impact of the internship}
+		\entry{\textbf{2023, first project:}
+				worked with a trader/researcher to implement
+				a tool for analyzing and calculating
+				some historical data of bonds,
+				talked with multiple people about how to achieve this.
+		}
+		\entry{\textbf{2023, second project:}
+				made OCaml work with gdb/lldb;
+				extended the OCaml compiler with debug
+				info of variable types
+				and implemented support for OCaml
+				and its variant types in lldb
+				(a part of the llvm project).
+		}
+		\entry{\textbf{2022, first project:}
+				extended a company product for their clients
+				to support multiple types of securities.
+		}
+		\entry{\textbf{2022, second project:}
+				designed and implemented an asynchronous system for
+				retrieving and sending data across multiple
+				sources, with a focus on reconnections,
+				error handling and correctness.
+		}
 	}
 }
 
@@ -33,11 +53,19 @@
 \outerlist{
 	\entrybig
 	{\textbf{University of Warsaw}}{}
-	{B.S. in Computer Science, currently \textbf{GPA 3.93 / 4.00}}{2020\textendash 2023}
+	{Bachelor of Science in Computer Science, \textbf{GPA 4.95 / 5.00}}{2020\textendash 2023}
 	\innerlist{
-		\entry{WIP Thesis: ``Accelerating package expansion in Rust through development of a semantic versioning tool''}
-		\entry{TODO -- describe the impact of the thesis}
+		\entry{One of the \textbf{2 students out of around 160}
+			to receive an ,,Exceptional 5!'' final grade.}
+		\entry{Thesis
+		\href{https://arxiv.org/abs/2308.14623}{(available here)}:
+		``Accelerating package expansion in Rust through development of a semantic versioning tool'';
+		\textbf{wrote a blog post} (link soon) describing the important results of the thesis.}
 	}
+
+	\entrybig
+	{\textbf{University of Warsaw}}{}
+	{Master's degree in Computer Science, work in progress}{2023\textendash 2025}
 }
 
 \section{Competitions (sports programming)}
@@ -53,19 +81,16 @@
 
 \section{Organization of competitions}
 \denseouterlist{
-	\entry{Vicechair of the Jury at the Finals and the Regional Stage of the Polish Olympiad in Informatics (2023 -- Current).}
+	\entry{\textbf{Vicechair of the Jury} of the Polish Olympiad in Informatics (2023 -- 2025).}
 	\entry{Member of the Jury of the Polish Olympiad in Informatics and Junior Olympiad in Informatics, member of Polish Olympiad in Informatics' Task Commision (2020 -- Current).}
-	\entry{Team leader/deputy leader of the Polish national team in IOI 2021, CEOI 2021, BOI 2021, BOI 2022.}
+	\entry{Team leader/deputy leader of the Polish national team in IOI 2021, CEOI 2021, BOI 2021, BOI 2022, BOI 2023.}
 	\entry{Each year organizing one or two algorithmic camps for high school students to prepare them for major competitions.}
 }
 
 \sidebyside{
 	\section{Languages}
-	\denseouterlist{
-		\entry{\textbf{English:} Full professional proficiency}
-		\entry{\textbf{Polish:} Native proficiency}
-		\entry{\textbf{French:} Limited working proficiency}
-	}
+	English and Polish -- full professional proficiency,
+	French -- limited working proficiency.
 }{
 	\section{Programming languages}
 	Rust, C++, OCaml, Python, C, Java, Haskell
