--- a/simplecv.sty
+++ b/simplecv.sty
@@ -53,6 +53,7 @@
 
 % Shorthand
 \newcommand{\github}[1]{\href{https://github.com/#1/}{github.com/#1}}
+\newcommand{\gitlab}[1]{\href{https://gitlab.com/#1/}{gitlab.com/#1}}
 \newcommand{\email}[1]{\href{mailto:#1}{#1}}
 \newcommand{\website}[1]{\href{https://#1/}{#1}}
 \newcommand{\linkedin}[1]{\href{https://www.linkedin.com/in/#1/}{#1}}
@@ -61,23 +62,17 @@
 \newenvironment*{dummyenv}{}{}
 
 % Inline heading
-\newcommand{\headinginline}[3]{
-    \begin{minipage}[t]{0.30\textwidth}
-		\vspace*{\fill}
-		\Huge \textcolor{color-title}{#1}
+\newcommand{\headinginline}[2]{
+    \begin{minipage}[t]{0.60\textwidth}
+    \vspace*{\fill}
+    \Huge \textcolor{color-title}{#1}
     \end{minipage}
     \begin{minipage}[t]{0.35\textwidth}
-		\begin{flushright}
-			#2
-		\end{flushright}
-    \end{minipage}
-    \begin{minipage}[t]{0.35\textwidth}
-		\begin{flushright}
-			#3
-		\end{flushright}
+    \begin{flushright}
+    #2
+    \end{flushright}
     \end{minipage}
 }
-
 % Photo heading
 \newcommand{\headingphoto}[3]{
     \begin{minipage}[t]{0.60\textwidth}
