--- a/cv.tex
+++ b/cv.tex
@@ -10,23 +10,22 @@
 
 \headinginline{Tomasz Nowak}
 	{
-    Website: \website{tonowak.com} \\ 
     Email: \email{tomasz.nowak@tonowak.com} \\
-    GitHub: \github{tonowak} \\
-    GiLab: \gitlab{tonowak} \\
     LinkedIn: \linkedin{tomasz-nowak-tonowak} \\
+}{
+    GitHub: \github{tonowak} \\
+    GitLab: \gitlab{tonowak} \\
 }% {PA_zdjecie_twarzy.jpg}
 
 \section{Experience}
 \outerlist{
-	\entry{\textbf{Jane Street -- Software Developer Internship, 
-		2022 and 2023} \hfill London}
+	\entry{\textbf{Jane Street -- Software Developer Internship} \hfill London, 2022 and 2023}
 	\innerlist {
 		\entry{\textbf{2023, first project:}
 				worked with a trader/researcher to implement
 				a tool for analyzing and calculating
-				some historical data of bonds,
-				talked with multiple people about how to achieve this.
+				some historical data of securities
+				for determining risks and benefits of holding a bond.
 		}
 		\entry{\textbf{2023, second project:}
 				made OCaml work with gdb/lldb;
@@ -52,20 +51,24 @@
 \section{Education}
 \outerlist{
 	\entrybig
-	{\textbf{University of Warsaw}}{}
-	{Bachelor of Science in Computer Science, \textbf{GPA 4.95 / 5.00}}{2020\textendash 2023}
+	{University of Warsaw}{}
+	{\textbf{Bachelor's degree} in Computer Science, \textbf{GPA 4.95 / 5.00}}{2020\textendash 2023}
 	\innerlist{
 		\entry{One of the \textbf{2 students out of around 160}
 			to receive an ,,Exceptional 5!'' final grade.}
 		\entry{Thesis
-		\href{https://arxiv.org/abs/2308.14623}{(available here)}:
-		``Accelerating package expansion in Rust through development of a semantic versioning tool'';
-		\textbf{wrote a blog post} (link soon) describing the important results of the thesis.}
+		\href{https://arxiv.org/abs/2308.14623}{(link here)}:
+		``Accelerating package expansion in Rust through development of a semantic versioning tool''.
+
+		\textbf{Wrote a blog post} (link soon) describing the important results of the thesis.
+
+		My code in this project is now used by companies like \textbf{Microsoft, Amazon, Mozilla and Adobe},
+		and by some of the biggest Rust libraries.}
 	}
 
 	\entrybig
-	{\textbf{University of Warsaw}}{}
-	{Master's degree in Computer Science, work in progress}{2023\textendash 2025}
+	{University of Warsaw}{}
+	{\textbf{Master's degree} in Computer Science, work in progress}{2023\textendash 2025}
 }
 
 \section{Competitions (sports programming)}
